data/derived/sp14/progs/unify/prog3629.ml.out
Characters 33-49:
  List.map (sepConcat "" l) l;;
           ^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a -> 'b
